# shannon-prime-kairos

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  HINDSIGHT.md  MCP-README.md  MIGRATION-MAP.md  README.md  _asr.out  _asr.py  _asr2.out  _asr2.py  _asr3.out  _asr3.py  _mktts.ps1  _natdiag.out  _natdiag.py  _natwrap.out  _natwrap.py  _proc.err  _proc.out  _proc.py  _vp.out  _vp.py  _vt.out  _vt.py  _wcheck.py  mcp_servers.json  pyproject.toml  serve.bat  serve.py
console/: console.html  dashboard.html  index.html  operator.html  ops.html  tuning.html  voice_train.html
docs/: ADR-012-fp16-kv.md  CONTINUITY.md  INVARIANT-MEMORY.md  INVARIANT-ROADMAP.md  MEMORY-AND-RECALL.md  PAPER-INVARIANT-MEMORY-POST.md  SEMANTICS.md
engine/: build-core-cpu.bat  build-cuda-backend.bat  build-wirecuda.bat
gates/: G-CLEAN-BUILD.md  G-CONVERSATION-and-speed.md  G-KAIROS-P1.md  G-KAIROS-P1a-kernel-copy.md  G-KAIROS-P1b-2a-rehome.md  G-KAIROS-P1b-legacy-policy-1.md  G-KAIROS-P1c-1.md  G-KAIROS-P1c-2-shear.md  G-KAIROS-P4.md  G-KAIROS-P5-launch.md  G-MEMPOLICY-V3-rehomed.md  G-PERF-ATTN-failed-optimization.md  G-PERF-float-refuted-heads-are-the-tax.md  G-SEM-SCOREBOARD.md  G-VERBATIM-digits-broken.md  GATE-INDEX.md  MEMORY-AUDIT-2026-07-12.md  README.md  REGRESSION-2026-07-11-shear.md  phase_status.json
harness/: __init__.py  agent.py  config.py
harness_tests/: diag_caps.py  diag_convo.py  g_admission.py  g_agency_loop_e2e.py  g_agent_memory_e2e.py  g_alive.py  g_asked.py  g_capture_async.py  g_capture_live.py  g_claim.py  g_clock.py  g_consolidate_live.py  g_conversation_e2e.py  (+90 more)
(+264 files in other folders)
